--- a/css/style.css
+++ b/css/style.css
@@ -112,12 +112,7 @@ body {
   align-items: center;
   justify-content: center;
   position: relative;
-}
-
-.inner-text {
-  display: inline-block;
-  white-space: nowrap;
-  transform-origin: center;
+  overflow: hidden;
 }
 
 .rotate-90 {
@@ -149,4 +144,63 @@ body {
 }
 .player6 {
   background-color: lightpink;
+}
+
+.content-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+}
+
+.original-value {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  background-color: transparent;
+}
+
+.inner-text {
+  white-space: nowrap;
+  font-size: 24px;
+  font-weight: bold;
+  z-index: 100;
+}
+
+.number-display {
+  font-size: 40px;
+  font-weight: bold;
+  z-index: 100;
+}
+
+.button-container {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.left-button,
+.right-button {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+  font-weight: bold;
+  cursor: pointer;
+  user-select: none;
+  background: rgba(255, 255, 255, 0.2);
+}
+
+.left-button:hover {
+  background: rgba(255, 0, 0, 0.4);
+}
+
+.right-button:hover {
+  background: rgba(0, 255, 0, 0.4);
 }
