--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Alef:wght@400;700&family=Mogra&display=swap");
 
 * {
-  font-family: "Poppins", sans-serif;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -20,7 +19,9 @@ body {
 }
 
 body {
-  font-family: Arial, sans-serif;
+  font-family: "Mogra", system-ui;
+  font-weight: 700;
+  font-size: 2em;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -47,7 +48,7 @@ body {
 #playerSelection button {
   padding: 15px;
   margin: 10px;
-  font-size: 18px;
+  font-size: 0.7em;
   cursor: pointer;
   background-color: #409d43;
   color: white;
@@ -116,7 +117,7 @@ body {
   color: white;
   border: none;
   padding: 10px 15px;
-  font-size: 1.5rem;
+  font-size: 1em;
   cursor: pointer;
   z-index: 1100;
   transition: background 0.3s ease;
@@ -132,15 +133,16 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 96vh;
+  height: 100vh;
   width: 100vw;
+  padding: 20px;
 }
 
 #gridContainer {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(6, auto);
-  gap: 10px;
+  gap: 20px;
   width: 100%;
   height: 100%;
   margin: auto;
@@ -156,6 +158,17 @@ body {
   justify-content: center;
   position: relative;
   overflow: hidden;
+  border-radius: 20px;
+}
+
+.number-display {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  font-weight: 700;
+  font-size: 3em;
+  justify-content: center;
+  align-items: center;
 }
 
 .content-wrapper {
@@ -164,8 +177,38 @@ body {
   align-items: center;
   justify-content: center;
   position: absolute;
-  font-weight: 600;
-  font-size: 1.2rem;
+}
+
+.heart-icon {
+  position: absolute;
+  bottom: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 5em;
+  opacity: 0.5;
+  pointer-events: none;
+  z-index: 0;
+  animation-name: heartbeat;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+}
+
+@keyframes heartbeat {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.content-container {
+  width: 100%;
+  height: 100%;
+  z-index: 100;
 }
 
 .original-value {
@@ -173,7 +216,7 @@ body {
   top: 5px;
   right: 5px;
   padding: 5px;
-  font-size: 14px;
+  font-size: 1.4em;
   color: white;
   background-color: rgba(0, 0, 0, 0.7);
   border-radius: 5px;
@@ -222,23 +265,12 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 2rem;
-  font-weight: bold;
+  font-size: 2.5em;
+  font-weight: 700;
   color: white;
-  background: rgba(0, 0, 0, 0.1);
   border: none;
   cursor: pointer;
   transition: background 0.3s ease;
-}
-
-.left-button:hover,
-.right-button:hover {
-  background: rgba(255, 255, 255, 0.2);
-}
-
-.left-button:active,
-.right-button:active {
-  background: none;
 }
 
 .rotate-90 {
