--- a/css/style.css
+++ b/css/style.css
@@ -181,11 +181,11 @@ body {
 
 .heart-icon {
   position: absolute;
-  bottom: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 5em;
-  opacity: 0.5;
+  text-align: center;
+  font-size: 7em;
+  line-height: -1;
+  bottom: 0;
+  opacity: 0.4;
   pointer-events: none;
   z-index: 0;
   animation-name: heartbeat;
@@ -266,7 +266,7 @@ body {
   align-items: center;
   justify-content: center;
   font-size: 2.5em;
-  font-weight: 700;
+  font-weight: 400;
   color: white;
   border: none;
   cursor: pointer;
