--- a/css/style.css
+++ b/css/style.css
@@ -182,7 +182,7 @@ body {
 .heart-icon {
   position: absolute;
   text-align: center;
-  font-size: 7em;
+  font-size: 30vw;
   line-height: -1;
   bottom: 0;
   opacity: 0.4;
