--- a/css/style.css
+++ b/css/style.css
@@ -68,13 +68,14 @@ body {
   width: 100%;
   background-color: #333;
   color: white;
-  padding: 10px;
+  padding: 20px 10px;
   z-index: 1000;
   display: flex;
   justify-content: center;
   gap: 20px;
   transform: translateY(-100%);
-  transition: transform 0.3s ease-in-out;
+  flex-wrap: wrap;
+  transition: transform 0.5s ease-in-out;
 }
 
 #navbar.active {
@@ -88,44 +89,64 @@ body {
   color: white;
   cursor: pointer;
   user-select: none;
+  font-size: 16px;
+  font-family: inherit;
+  border-radius: 15px;
+  flex-grow: 1;
+  min-width: 120px;
+  max-width: 200px;
 }
 
 #navbar button:hover {
   background-color: #555;
 }
 
-#extra-buttons {
-  display: flex;
-  gap: 20px;
-}
-
-#navbar #extra-buttons .highlight-button {
-  background: #ff9800; /* Orange farve for at skille sig ud */
+#select-player-button.highlight-button {
+  cursor: pointer;
+  font-size: large;
+  font-family: inherit;
   font-weight: bold;
-  border-radius: 8px;
+  color: #0011ff;
+  background-color: #f8f8fd;
+  padding: 0.8em 2.2em;
+  border-radius: 50em;
+  border: 6px solid #8b93f8;
+  box-shadow: 0px 8px #1f35ff;
 }
-
-#select-player-button:hover {
-  background: #e68900;
+#select-player-button.highlight-button:active {
+  position: relative;
+  top: 8px;
+  border: 6px solid #646fff;
+  box-shadow: 0px 0px;
 }
 
 #menu-toggle {
   position: fixed;
-  top: 10px;
-  left: 10px;
+  bottom: 10px;
+  right: 10px;
   background-color: #333;
   color: white;
   border: none;
   padding: 10px 15px;
-  font-size: 1em;
+  font-size: 18px;
   cursor: pointer;
   z-index: 1100;
-  transition: background 0.3s ease;
   border-radius: 5px;
 }
 
-#menu-toggle:hover {
-  background-color: #555;
+#overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.3);
+  display: none;
+  z-index: 5;
+}
+
+#navbar.active {
+  z-index: 1000;
 }
 
 #gameBoard {
@@ -149,16 +170,15 @@ body {
 }
 
 .grid-item {
-  background-color: lightblue;
   padding: 0;
   text-align: center;
-  border: 1px solid #000;
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
   overflow: hidden;
   border-radius: 20px;
+  transition: background-color 0.4s ease;
 }
 
 .number-display {
@@ -169,6 +189,22 @@ body {
   font-size: 3em;
   justify-content: center;
   align-items: center;
+  position: absolute;
+  transition: transform 0.3s ease-out;
+  will-change: transform;
+}
+
+.number-transition {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  font-weight: 700;
+  font-size: 3em;
+  justify-content: center;
+  align-items: center;
+  transition: transform 0.3s ease-out;
+  will-change: transform;
 }
 
 .content-wrapper {
@@ -230,7 +266,7 @@ body {
 }
 
 .grid-item.celebration {
-  z-index: 1000;
+  z-index: 10;
   animation: celebrate 2s ease-in-out infinite;
 }
 
@@ -240,7 +276,7 @@ body {
     box-shadow: 0 0 10px rgba(255, 0, 0, 0.8), 0 0 20px rgba(255, 255, 0, 0.6);
   }
   50% {
-    transform: scale(1.1);
+    transform: scale(0.8);
     box-shadow: 0 0 20px rgba(255, 0, 0, 1), 0 0 30px rgba(255, 255, 0, 0.8);
   }
   100% {
@@ -270,7 +306,14 @@ body {
   color: white;
   border: none;
   cursor: pointer;
-  transition: background 0.3s ease;
+}
+
+.left-button {
+  margin-left: -1em;
+}
+
+.right-button {
+  margin-right: -1em;
 }
 
 .rotate-90 {
