--- a/css/style.css
+++ b/css/style.css
@@ -31,10 +31,37 @@ body {
   width: 100vw;
 }
 
-@media (orientation: portrait) {
+#gameBoard {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
 }
-
+@media (orientation: portrait) {
+  #gameBoard {
+    height: 100vh;
+    width: 100vw;
+  }
+}
 @media (orientation: landscape) {
+  #wrapper {
+    position: absolute;
+    width: 100vh;
+    height: 100vw;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(-90deg);
+    transform-origin: center;
+  }
+  #content {
+    width: 100vh;
+    height: 100vw;
+  }
+  #gameBoard {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 #startPage {
@@ -147,16 +174,6 @@ body {
 
 #navbar.active {
   z-index: 1000;
-}
-
-#gameBoard {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  width: 100vw;
-  padding: 20px;
 }
 
 #gridContainer {
