--- a/css/style.css
+++ b/css/style.css
@@ -38,31 +38,6 @@ body {
   align-items: center;
   padding: 20px;
 }
-@media (orientation: portrait) {
-  #gameBoard {
-    height: 100vh;
-    width: 100vw;
-  }
-}
-@media (orientation: landscape) {
-  #wrapper {
-    position: absolute;
-    width: 100vh;
-    height: 100vw;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) rotate(-90deg);
-    transform-origin: center;
-  }
-  #content {
-    width: 100vh;
-    height: 100vw;
-  }
-  #gameBoard {
-    width: 100%;
-    height: 100%;
-  }
-}
 
 #startPage {
   text-align: center;
@@ -236,7 +211,6 @@ body {
   position: absolute;
   text-align: center;
   font-size: 30vw;
-  line-height: -1;
   bottom: 0;
   opacity: 0.4;
   pointer-events: none;
@@ -362,4 +336,36 @@ body {
 }
 .player6 {
   background-color: #e67e22;
+}
+
+@media (orientation: portrait) {
+  #gameBoard {
+    height: 100vh;
+    width: 100vw;
+  }
+}
+@media (orientation: landscape) {
+  #wrapper {
+    position: absolute;
+    width: 100vh;
+    height: 100vw;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(-90deg);
+    transform-origin: center;
+  }
+  #content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vh;
+    height: 100vw;
+  }
+  #gameBoard {
+    width: 100%;
+    height: 100%;
+  }
+  .heart-icon {
+    font-size: 30vh;
+  }
 }
