--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,9 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 }
 
 html,
@@ -250,6 +253,9 @@ body {
 .search-container input {
   padding: 10px;
   font-size: 16px;
+  user-select: text;
+  -webkit-user-select: text;
+  -ms-user-select: text;
 }
 
 .search-container button {
